Refine connection provider model
